= 1.3.4 = * tested up to WordPress 4.9 * fix: error preview option "Hide share buttons on static pages" * fix: showing marker with comments list * fix: hierarchy visibility in mobile menu * add: responsive video container * delete: removed CSS class 'hentry' for posts

--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
  * Theme URI: http://wp-puzzle.com/basic/
  * Author: WP Puzzle
  * Author URI: http://wp-puzzle.com/
- * Version: 1.3.3
+ * Version: 1.3.4
  * License: GNU General Public License v2 or later
  * License URI: http://www.gnu.org/licenses/gpl-2.0.html
  * Tags: two-columns, one-column, left-sidebar, right-sidebar, custom-background, custom-colors, custom-header, custom-menu, editor-style, featured-images, sticky-post, threaded-comments, translation-ready, microformats
@@ -241,8 +241,12 @@ button:hover,
 .top-menu .current-menu-item > span:hover { color: #fff; }
 .top-menu .sub-menu { margin: 0; }
 
-/* ============================================================================ */
+@media screen and (max-width: 1023px) {
+	.top-menu .sub-menu li a { padding: 10px 20px; }
+	.top-menu .sub-menu { margin: 0 0 0 20px; font-size: 14px; }
+}
 
+/* ============================================================================ */
 
 
 
@@ -252,17 +256,20 @@ button:hover,
 .entry-box { margin: 30px 0 0; }
 .entry-box .entry {	padding-bottom: 30px;}
 
-.content ul,
-.content ol { margin: 0.5em 0 1em 50px; }
-.content ul { list-style: outside url("img/li.svg"); }
-.content ol { list-style: decimal; }
-.content ul ul,
-.content ul ol,
-.content ol ol,
-.content ol ul { margin-top: 0; margin-bottom: 0; }
-.content li { padding-top: 5px; }
-.content ul li { padding-left: 5px; position: relative; }
+.entry-box ul,
+.entry-box ol { margin: 0.5em 0 1em 50px; }
+.entry-box ul { list-style: outside url("img/li.svg"); }
+.entry-box ol { list-style: decimal; }
+.entry-box ul ul,
+.entry-box ul ol,
+.entry-box ol ol,
+.entry-box ol ul { margin-top: 0; margin-bottom: 0; }
+.entry-box li { padding-top: 5px; }
+.entry-box ul li { padding-left: 5px; position: relative; }
 .ftrwidget ul { list-style: outside url("img/li.svg"); }
+
+.video-responsive { overflow: hidden; padding-bottom: 56.25%; position: relative; height: 0; margin-bottom: 1em;  }
+.video-responsive iframe { left: 0; top: 0; height: 100%; width: 100%; position: absolute;  }
 
 .comment-body ol, .comment-body ul { margin: 0.2em 0 0.5em 40px }
 .comment-body ul {list-style-type: disc;}
